--- a/css/style.css
+++ b/css/style.css
@@ -1786,7 +1786,8 @@ h4.custom-h42 {
     }
 }
 /* Style for Dropdowns - Hidden by Default */
-#nav .dropdown-menu {
+@media (max-width: 480px){
+	#nav .dropdown-menu {
     display: none;
     position: absolute;
     background-color: #41576C; /* Acadia Blue */
@@ -1796,24 +1797,30 @@ h4.custom-h42 {
     overflow-y: auto;
     border-radius: 5px;
 	-webkit-overflow-scrolling: touch; /* Smooth touch scroll */
+	}
 }
-
 /* Show dropdown on hover OR when active */
-#nav .dropdown:hover > .dropdown-menu,
-#nav .dropdown.active > .dropdown-menu {
+@media (max-width: 480px){
+	#nav .dropdown:hover > .dropdown-menu,
+	#nav .dropdown.active > .dropdown-menu {
     display: block;
+	}
 }
  /* Remove scrollbar but keep finger scrolling */
-    .dropdown-menu::-webkit-scrollbar {
+  @media (max-width: 480px){
+	  .dropdown-menu::-webkit-scrollbar {
         width: 0; /* Remove scrollbar */
         background: transparent;
     }
+}
 /* Dropdown Items */
-#nav .dropdown-menu li {
+@media (max-width: 480px){
+	#nav .dropdown-menu li {
     display: block;
     width: 100%;
 }
-
+}
+@media (max-width: 480px){
 #nav .dropdown-menu li a {
     display: block;
     padding: 10px;
@@ -1821,17 +1828,20 @@ h4.custom-h42 {
     color: #cfb06e;
     white-space: nowrap;
 }
-
+}
+@media (max-width: 480px){
 #nav .dropdown-menu li a:hover {
     background-color: #2f3e4c;
 }
+}
+@media (max-width: 480px){
  #nav ul li {
         display: block;
         width: 100%;
         text-align: center;
         border-bottom: 1px solid #ccc;
     }
-
+}
 /* Mobile View: Stack Items Vertically */
 @media (max-width: 768px) {
      #nav ul {
