--- a/css/style.css
+++ b/css/style.css
@@ -1908,6 +1908,14 @@ h4.custom-h42 {
         position: static;
     }
 }
+@media (max-width: 480px) {
+    #banner img {
+        width: 60%; /* Adjust as needed */
+        height: auto; /* Maintain aspect ratio */
+        display: block;
+        margin: 0 auto; /* Center the logo */
+    }
+}
 /* Footer */
 
 	#footer {
