--- a/css/style.css
+++ b/css/style.css
@@ -1209,6 +1209,7 @@ body2 {
     height: 100%;
     object-fit: cover;
     transform: translate(-50%, -50%);
+	display: block;
 }
 
 #banner:before {
@@ -1259,6 +1260,20 @@ body2 {
 #banner .logo-container img {
     max-width: 100%;
     height: auto;
+}
+#banner-image {
+    display: none;
+    width: 100%;
+    height: auto;
+}
+@media (max-width: 768px) {
+    #banner-video {
+        display: none; /* Hide video on mobile */
+    }
+
+    #banner-image {
+        display: block; /* Show image on mobile */
+    }
 }
 
 .image-container {
