--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+wra@charset "UTF-8";
 @import url(font-awesome.min.css);
 @import url("http://fonts.googleapis.com/css?family=Roboto:500,300");
 
@@ -2007,7 +2007,7 @@ h4.custom-h42 {
     }
 }
 @media (max-width: 760px) {
-    .parallax-bg, .parallax-bg2, .parallax-bg3, .parallax-bg4 {
+    .parallax-bg, .parallax-bg2, .parallax-bg3, .parallax-bg4, .parallax-bg5, .parallax-bg6, .parallax-bg7 {
         background-attachment: scroll; /* Removes parallax effect on mobile */
         background-position: center;
     }
