--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ body2 {
 	h2 {
 		font-size: 1.5em;
 		line-height: 1.5em;
+		padding-top: 40px;
 	}
 
 	h3 {
@@ -248,6 +249,7 @@ body2 {
 
 		header.major h2 {
 			font-size: 2em;
+			 margin-top: 40px;
 		}
 		header.major2 h2 {
     text-align: center;
